# vitonomi

./: .env.example  .gitignore  .prettierignore  .prettierrc.json  .spectral.yaml  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  eslint.config.js  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.cargo/: config.toml
.claude/rules/: cli.md  client-cli.md  core.md  docs.md  vito-cli.md  web.md
.github/workflows/: ci.yml
cli/: package.json  tsconfig.json
cli/src/: index.ts
cli/tests/: banner.test.ts
clients/cli/: Cargo.toml
clients/cli/src/: cli.rs  config.rs  hub_client.rs  lib.rs  main.rs  p2p.rs  prompts.rs  secret_cache.rs  state.rs
clients/cli/src/commands/: alias_create.rs  alias_delete.rs  alias_disable.rs  alias_inbox.rs  alias_list.rs  alias_mark_read.rs  alias_read.rs  alias_search.rs  clipboard.rs  cluster_create.rs  cluster_restore.rs  credential_add.rs  credential_copy.rs  credential_delete.rs  credential_edit.rs  credential_export.rs  credential_generate.rs  credential_get.rs  credential_import.rs  credential_list.rs  credential_search.rs  credential_totp.rs  domain_add.rs  domain_list.rs  domain_remove.rs  domain_verify.rs  init.rs  library_session.rs  local_head_store.rs  login.rs  logout.rs  mod.rs  mx_register.rs  record_delete.rs  record_get.rs  record_list.rs  record_put.rs  record_session.rs  search.rs  status.rs  (+5 more)
clients/cli/tests/: end_to_end.rs
clients/web/: package.json  tsconfig.json
clients/web/src/: index.ts
clients/web/tests/: banner.test.ts
core/: Cargo.toml  package.json  tsconfig.json
core/src/: banner.ts  encoding.rs  errors.rs  index.ts  lib.rs  logging.rs  logging.ts  types.rs
core/src/credentials/: mod.rs  password_gen.rs
core/src/credentials/export/: json.rs  mod.rs  vitonomi_backup.rs
core/src/credentials/import/: bitwarden.rs  chrome.rs  keepass_xc.rs  mod.rs  one_password.rs
core/src/crypto/: admin_chain.rs  aead.rs  alias_inbound.rs  argon2.rs  challenge.rs  cluster.rs  cluster_keys.rs  invite_kek.rs  keyblob.rs  keys.rs  lookup_id.rs  mod.rs  pq.rs  random.rs  seedphrase.rs  selfencrypt.rs  spki.rs
core/src/protocol/: autonomi_bridge.rs  hub_control_plane.rs  mod.rs  vault_bus.rs  vault_storage.rs
core/src/protocol/testing/: in_memory_bus.rs  in_memory_hub.rs  in_memory_storage.rs  mod.rs
core/src/protocol/wire/: accept.rs  admin_chain.rs  aliases.rs  bootstrap.rs  data_plane.rs  domains.rs  login.rs  mod.rs  mx_relay_push.rs  relay_push.rs  rendezvous.rs  subdomains.rs  vault_bus.rs
core/src/record/: head_pointer.rs  mod.rs  record_store.rs  snapshot.rs  user_keys.rs
core/src/search/: mod.rs  registry.rs
core/src/totp/: mod.rs
core/src/types/: alias.rs  alias_message.rs  credential.rs  domain.rs  mod.rs  subdomain.rs
core/tests/: bootstrap.rs  conformance.rs  hub_alias_directory.rs  hub_alias_inbox.rs  hub_domains.rs  hub_mx_relays.rs  hub_subdomains.rs  logging.test.ts  phase7_hub.rs  short_token.rs  vault_status.rs
core/tests/common/: mod.rs
docs/: LICENSE  README.md  api-spec.yaml  architecture.md  autonomi-compat.md  data-format.md  encryption-flows.md  monorepo.md  protocol.md  record-types.md  relay-ops.md  relay-reproducible-build.md  self-hosting.md  threat-model.md
docs/vectors/: README.md
hub/: Cargo.toml  package.json
hub/src/: auth.rs  cli.rs  config.rs  index.ts  lib.rs  main.rs  server.rs  state.rs  tls.rs
hub/src/routes/: admin_chain.rs  alias_directory.rs  alias_inbox.rs  auth.rs  clusters.rs  domains.rs  errors.rs  keyblob.rs  mod.rs  mx_relays.rs  phase7.rs  status.rs  subdomains.rs  users.rs  vaults.rs
hub/src/ws/: mod.rs  vault_bus.rs
hub/tests/: smoke.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/src/harness/: admin.rs  hub.rs  mod.rs  params.rs  transport.rs  vault.rs
integration/tests/: credentials_cli_e2e.rs  daemon_cli_record_roundtrip.rs  domain_record_persistence_e2e.rs  hub_error_propagation_e2e.rs  mini_mvp.rs  mx_register_e2e.rs  record_put_get_libp2p.rs  subdomain_claim_e2e.rs
landing/: astro.config.mjs  package.json  tsconfig.json
landing/public/: robots.txt  site.webmanifest
landing/src/: config.ts
landing/src/components/: ComparisonGrid.astro  FeatureGrid.astro  Footer.astro  Header.astro  Hero.astro  JsonLd.astro  Statement.astro  Steps.astro
landing/src/layouts/: Base.astro
landing/src/pages/: coming-soon.astro  index.astro  privacy.astro  self-hosting.astro
landing/src/styles/: global.css
mx/: Cargo.toml  package.json
mx/src/: cli.rs  config.rs  hub_client.rs  identity.rs  index.ts  lib.rs  main.rs  state_dir.rs  tls.rs
mx/src/commands/: init.rs  mod.rs  pubkey.rs  start.rs  status.rs
mx/src/dispatch/: alias_lookup.rs  hub_push.rs  mod.rs
mx/src/operability/: metrics.rs  mod.rs  tracing_redact.rs
mx/src/smtp/: encryptor_stream.rs  handler.rs  mod.rs  server.rs
mx/tests/: cli_init_writes_default_toml.rs  cli_status_prints_config.rs
scripts/: check-spec-refs.sh
vault/: Cargo.toml  package.json
vault/src/: accept.rs  bootstrap.rs  chain_store.rs  cli.rs  cluster_key.rs  config.rs  hub_client.rs  identity.rs  index.ts  lib.rs  main.rs  p2p.rs  set_hub.rs  state_dir.rs
vault/src/commands/: accept.rs  info.rs  init.rs  mod.rs  set_hub.rs  start.rs  status.rs
vault/src/storage/: fs_chunk_dir.rs  mod.rs  sqlite.rs
vault/tests/: end_to_end.rs
web/: package.json  tsconfig.json
