[package]
name = "vitonomi-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Top-level integration tests that bind hub + vault + cli together. The [lib] target exports a shared end-to-end test harness used by every integration test in this crate."

[lints]
workspace = true

[lib]
name = "vitonomi_integration"
path = "src/lib.rs"

[[test]]
name = "cluster_bootstrap_e2e"
path = "tests/cluster_bootstrap_e2e.rs"

[[test]]
name = "record_put_get_libp2p"
path = "tests/record_put_get_libp2p.rs"

[[test]]
name = "daemon_cli_record_roundtrip"
path = "tests/daemon_cli_record_roundtrip.rs"

[[test]]
name = "credentials_cli_e2e"
path = "tests/credentials_cli_e2e.rs"

[dependencies]
vitonomi-core = { path = "../core" }
vitonomi-hub = { path = "../hub" }
vitonomi-vault = { path = "../vault" }
vitonomi-cli = { path = "../clients/cli" }

tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = "1"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"
libp2p = { version = "0.56", default-features = false, features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "request-response",
    "cbor",
    "macros",
] }
anyhow = "1"
