[package]
name = "vitonomi-vault"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "vitonomi vault daemon. Persists identity + admin chain, dials the hub outbound (HTTPS + WSS), authenticates via signed challenge."

[lints]
workspace = true

[[bin]]
name = "vitonomi-vault"
path = "src/main.rs"

[lib]
name = "vitonomi_vault"
path = "src/lib.rs"

[dependencies]
vitonomi-core = { path = "../core" }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "fs"] }

# HTTP client + WS client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-manual-roots"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.29"

# TLS — custom ServerCertVerifier for SPKI pinning
rustls = { version = "0.23", default-features = false, features = ["std", "ring", "tls12"] }
rustls-pemfile = "2"
sha2 = "0.10"
base64 = "0.22"

# Errors / serde / config / logging
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
toml = "0.8"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
vitonomi-hub = { path = "../hub" }
