[package]
name = "vitonomi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "vitonomi-cli — admin CLI client. Cluster create / restore, login, vault invite / list, status."

[lints]
workspace = true

[[bin]]
name = "vitonomi-cli"
path = "src/main.rs"

[lib]
name = "vitonomi_cli"
path = "src/lib.rs"

[dependencies]
vitonomi-core = { path = "../../core" }

# Async runtime + HTTP
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Errors / serde / config / logging
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
toml = "0.8"

# Prompts (password input). `dialoguer`'s `Password` does not echo.
dialoguer = "0.11"
sha2 = "0.10"
hex = "0.4"
zeroize = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
vitonomi-hub = { path = "../../hub" }
